@@ -16,12 +16,22 @@
   <!-- Set the version levels for linked dependencies -->
   <properties>
     <dropwizard.version>0.6.1</dropwizard.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <build>
-
-    <!-- Shade plugin is required to make a "slim" JAR -->
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.14.1</version>
+        <configuration>
+          <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m -ea -Dfile.encoding=UTF-8</argLine>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -31,6 +41,8 @@
           <configLocation>checkstyle.xml</configLocation>
         </configuration>
       </plugin>
+
+      <!-- Shade plugin is required to make a "slim" JAR -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
